Fixed issue where columns were displaying different widths or not aligned properly.

--- a/src/main/webapp/css/secondtopnav.css
+++ b/src/main/webapp/css/secondtopnav.css
@@ -17,20 +17,14 @@ html, body {
 .topnav-ul {
 
 	display: grid;
-    grid-template-columns: repeat(3, 100px);
     grid-auto-flow: column;
 	overflow: hidden;
 	font-size: 23px;
 }
 
-.topnav-li {
+.topnav-ul a {
 
-	width: 100%;
 	align-self: center;
-}
-
-.topnav-li a {
-
 	display: block;
 	color: white;
 	text-align: center;
@@ -38,7 +32,7 @@ html, body {
 	text-decoration: none;
 }
 
-.topnav-li a:hover:not(.topnav-active) {
+.topnav-ul a:hover:not(.topnav-active) {
 	background-color: #111;
 }
 
@@ -48,5 +42,5 @@ html, body {
 
 @media screen and (max-height: 450px) {
 	.topnav-ul {padding-top: 15px;}
-	.topnav-li a {font-size: 18px;}
+	.topnav-ul a {font-size: 18px;}
 }
